log
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator+(rover::vector_state&)’:
vector2D.cpp:77:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel += vs.vel;
         ^
vector2D.cpp:77:19: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel += vs.vel;
                   ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator+(rover::polar_vec_t&)’:
vector2D.cpp:83:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel += v;
         ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator+(float)’:
vector2D.cpp:89:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel += e;
         ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator-(rover::vector_state&)’:
vector2D.cpp:95:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel -= vs.vel;
         ^
vector2D.cpp:95:19: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel -= vs.vel;
                   ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator-(rover::polar_vec_t&)’:
vector2D.cpp:101:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel -= v;
         ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator-(float)’:
vector2D.cpp:107:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel -= e;
         ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator*(float)’:
vector2D.cpp:113:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel *= e;
         ^
vector2D.cpp: In member function ‘rover::vector_state& rover::vector_state::operator/(float)’:
vector2D.cpp:119:9: error: ‘class rover::vector_state’ has no member named ‘vel’
   this->vel /= e;
         ^
vector2D.cpp:121:10: error: invalid initialization of non-const reference of type ‘rover::vector_state&’ from an rvalue of type ‘rover::vector_state*’
   return this;
          ^
vector2D.cpp:122:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
